libauth_la_SOURCES = \
	auth/AuthAuthorizeHandler.cc \
	auth/AuthClientHandler.cc \
	auth/AuthSessionHandler.cc \
	auth/AuthServiceHandler.cc \
	auth/AuthMethodList.cc \
	auth/cephx/CephxAuthorizeHandler.cc \
	auth/cephx/CephxClientHandler.cc \
	auth/cephx/CephxProtocol.cc \
	auth/cephx/CephxServiceHandler.cc \
	auth/cephx/CephxSessionHandler.cc \
	auth/cephx/CephxKeyServer.cc \
	auth/none/AuthNoneAuthorizeHandler.cc \
	auth/unknown/AuthUnknownAuthorizeHandler.cc \
	auth/Crypto.cc \
	auth/KeyRing.cc \
	auth/RotatingKeyRing.cc
noinst_LTLIBRARIES += libauth.la

noinst_HEADERS += \
	auth/cephx/CephxAuthorizeHandler.h \
	auth/cephx/CephxKeyServer.h \
	auth/cephx/CephxProtocol.h \
	auth/cephx/CephxClientHandler.h \
	auth/cephx/CephxServiceHandler.h \
	auth/cephx/CephxSessionHandler.h \
	auth/none/AuthNoneAuthorizeHandler.h \
	auth/none/AuthNoneClientHandler.h \
	auth/none/AuthNoneServiceHandler.h \
	auth/none/AuthNoneSessionHandler.h \
	auth/none/AuthNoneProtocol.h \
	auth/unknown/AuthUnknownAuthorizeHandler.h \
	auth/unknown/AuthUnknownClientHandler.h \
	auth/unknown/AuthUnknownServiceHandler.h \
	auth/unknown/AuthUnknownSessionHandler.h \
	auth/unknown/AuthUnknownProtocol.h \
	auth/Auth.h \
	auth/AuthMethodList.h \
	auth/AuthClientHandler.h \
	auth/AuthServiceHandler.h \
	auth/AuthSessionHandler.h \
	auth/AuthAuthorizeHandler.h \
	auth/KeyRing.h \
	auth/RotatingKeyRing.h \
	auth/Crypto.h

